examples/test/testpolicy1318.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1318
  namespace: namespace207
spec:
  podSelector:
    matchLabels:
      key8: value24
      key30: value11
      key38: value23
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key0: value12
          key32: value17
          key19: value28
      podSelector:
        matchLabels:
          key7: value29
